--- a/server/views/admin.hbs
+++ b/server/views/admin.hbs
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <form action="/logout" method="post">
+        <button type="submit">logout</button>
+    </form>
     {{#if users.length}}
     {{#each users}}
 
